feat: anchor quiz sessions on a collection as well as a pack/note pair
- V133 makes study_pack_id and note_id nullable together, adds a cascading
  source_collection_id, and enforces exactly-one-anchor via a CHECK added
  NOT VALID then VALIDATEd so the lock window stays short on the table every
  quiz mode shares
- keep both existing partial unique indexes with explicit IS NOT NULL
  predicates and add a third on (user_id, source_collection_id, session_mode);
  no sentinel, no COALESCE, no backfill of any existing row
- plan-scoped Adaptive Practice now writes the collection anchor with both
  pack anchors null, so it stops contending with note-scoped and Interview
  sessions for the ADAPTIVE index
- retire the borrowed-anchor machinery (occupancy filter, borrowed primary,
  anchorCollision): a collection-anchored session needs no free pack, and a
  pack carrying a note-scoped session is now a legitimate source
- resolve plan scope through one column-first, JSONB-fallback resolver so
  pre-migration in-flight sessions stay resumable; new rows write both
- add GET /adaptive-practice/sessions/{sessionId} and a session-addressed
  frontend route, closing a path where quota was charged for a session that
  could not be navigated to or found
- fail loudly on a null anchor at the ConceptHealth write seam and on an
  invalid anchor shape at construction, rather than writing against a null key
- add source_collection_id to nine H2 integration fixtures and mirror V133's
  nullability there, so the shared test schema stops contradicting the
  migration; the anchor CHECK is exercised against real PostgreSQL, which is
  the only place a constraint can actually be tested
- guards: both partial-index legs, collection uniqueness, note/collection
  coexistence, the all-packs-occupied payoff, legacy JSONB resume, null-anchor
  entry and reload, source attribution, the non-null construction invariant
  and the 404 boundary

No quota, entitlement, meter, analytics-event, mode or onbo